avoid get conf query for captcha check, load only org name/mail