@@ -42,8 +42,8 @@ import alfio.repository.*;
 import alfio.repository.user.OrganizationRepository;
 import alfio.util.*;
 import lombok.AllArgsConstructor;
-import org.apache.commons.collections4.IteratorUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Validate;
 import org.apache.commons.lang3.time.DateUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.http.HttpHeaders;
@@ -132,9 +132,9 @@ public class EventApiV2Controller {
                     .stream()
                     .collect(Collectors.toMap(EventDescription::getLocale, EventDescription::getDescription)));
 
-                var organization = organizationRepository.getById(event.getOrganizationId());
+                var organization = organizationRepository.getContactById(event.getOrganizationId());
 
-                var configurationsValues = configurationManager.getFor(Arrays.asList(
+                var configurationsValues = configurationManager.getFor(List.of(
                     MAPS_PROVIDER,
                     MAPS_CLIENT_API_KEY,
                     MAPS_HERE_APP_ID,
@@ -151,7 +151,11 @@ public class EventApiV2Controller {
                     DISPLAY_DISCOUNT_CODE_BOX,
                     USE_PARTNER_CODE_INSTEAD_OF_PROMOTIONAL,
                     GOOGLE_ANALYTICS_KEY,
-                    GOOGLE_ANALYTICS_ANONYMOUS_MODE
+                    GOOGLE_ANALYTICS_ANONYMOUS_MODE,
+                    // captcha
+                    ENABLE_CAPTCHA_FOR_TICKET_SELECTION,
+                    RECAPTCHA_API_KEY
+                    //
                 ), ConfigurationLevel.event(event));
 
                 var geoInfoConfiguration = Map.of(
@@ -171,7 +175,7 @@ public class EventApiV2Controller {
                 });
 
                 //
-                boolean captchaForTicketSelection = configurationManager.isRecaptchaForTicketSelectionEnabled(event);
+                boolean captchaForTicketSelection = isRecaptchaForTicketSelectionEnabled(configurationsValues);
                 String recaptchaApiKey = null;
                 if (captchaForTicketSelection) {
                     recaptchaApiKey = configurationsValues.get(RECAPTCHA_API_KEY).getValueOrDefault(null);
@@ -443,9 +447,11 @@ public class EventApiV2Controller {
             }
 
             Optional<String> promoCodeDiscount = codeCheck.map(ValidatedResponse::getValue).flatMap(Pair::getRight).map(PromoCodeDiscount::getPromoCode);
+            var configurationValues = configurationManager.getFor(List.of(
+                ENABLE_CAPTCHA_FOR_TICKET_SELECTION,
+                RECAPTCHA_API_KEY), ConfigurationLevel.event(event));
 
-
-            if (isCaptchaInvalid(reservation.getCaptcha(), request.getRequest(), event)) {
+            if (isCaptchaInvalid(reservation.getCaptcha(), request.getRequest(), configurationValues)) {
                 bindingResult.reject(ErrorsCode.STEP_2_CAPTCHA_VALIDATION_FAILED);
             }
 
@@ -654,8 +660,14 @@ public class EventApiV2Controller {
         return headers;
     }
 
-    private boolean isCaptchaInvalid(String recaptchaResponse, HttpServletRequest request, EventAndOrganizationId event) {
-        return configurationManager.isRecaptchaForTicketSelectionEnabled(event)
+    private boolean isRecaptchaForTicketSelectionEnabled(Map<ConfigurationKeys, ConfigurationManager.MaybeConfiguration> configurationValues) {
+        Validate.isTrue(configurationValues.containsKey(ENABLE_CAPTCHA_FOR_TICKET_SELECTION) && configurationValues.containsKey(RECAPTCHA_API_KEY));
+        return configurationValues.get(ENABLE_CAPTCHA_FOR_TICKET_SELECTION).getValueAsBooleanOrDefault(false) &&
+            configurationValues.get(RECAPTCHA_API_KEY).getValueOrDefault(null) != null;
+    }
+
+    private boolean isCaptchaInvalid(String recaptchaResponse, HttpServletRequest request, Map<ConfigurationKeys, ConfigurationManager.MaybeConfiguration> configurationValues) {
+        return isRecaptchaForTicketSelectionEnabled(configurationValues)
             && !recaptchaService.checkRecaptcha(recaptchaResponse, request);
     }
 
